--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -1,12 +1,8 @@
-nav.navbar.navbar-default.navbar-fixed-top
+nav.navbar.navbar-light
   .container
-    .navbar-header
-      button.navbar-toggle.collapsed type='button' data-toggle='collapse' data-target='#navbar' aria-expanded='false' aria-controls='navbar' 
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand href='#' Project name
+    button.navbar-toggler.navbar-toggler-right type='button' data-toggle='collapse' data-target='#navbar' aria-expanded='false' aria-controls='navbar' 
+      span.navbar-toggler-icon Toggle navigation
+    a.navbar-brand href='#' Project name
     #navbar.navbar-collapse.collapse
       ul.nav.navbar-nav
         li.active
