--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -1,21 +1,11 @@
-nav.navbar.navbar-light
-  .container
-    button.navbar-toggler.navbar-toggler-right type='button' data-toggle='collapse' data-target='#navbar' aria-expanded='false' aria-controls='navbar' 
-      span.navbar-toggler-icon Toggle navigation
-    a.navbar-brand href='#' Project name
-    #navbar.navbar-collapse.collapse
-      ul.nav.navbar-nav
-        li.active
-          a href='#' Home
-      ul.nav.navbar-nav.navbar-right
-        - if user_signed_in?
-          li.dropdown
-            = link_to '#', 'data-toggle': 'dropdown', id: 'user-menu', 'aria-haspopup': true, 'aria-expanded': false do
-              = current_user.email
-              span.caret
-            ul.dropdown-menu aria-labelledby='user-menu'
-              li = link_to 'ログアウト', destroy_user_session_path, method: :delete
-        - else
-          li = link_to 'サインアップ', new_user_registration_path
-          li = link_to 'ログイン', new_user_session_path
-          
+nav.navbar.navbar-toggleable-md.navbar-light.bg-faded
+  button.navbar-toggler.navbar-toggler-right type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"
+    span.navbar-toggler-icon
+  a.navbar-brand href="#" Navbar
+
+  .collapse.navbar-collapse id="navbar"
+    ul.navbar-nav.mr-auto.mt-2.mt-md-0
+      li.nav-item.active
+        a.nav-link href="#" Home
+      li.nav-item
+        a.nav-link href="#" Link
