--- a/app/views/static_pages/top.html.slim
+++ b/app/views/static_pages/top.html.slim
@@ -1,1 +1,15 @@
-h1 Top Page
+h1 PomoTask
+
+.row
+  .col-md-12
+    #pomo-timer
+      a.btn.btn-info.btn-block href='#' ぽもどろ開始
+      hr
+      .progress.text-center
+        .progress-bar role='progressbar' style="width: 40%; height: 35px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+          span 10:00
+    hr
+    ul.list-group
+      li.list-group-item 15:00-15:25 タスク１
+      li.list-group-item 15:30-15:55 タスク２
+      li.list-group-item 16:00-16:25 タスク３
